// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-actions-chips Renders \`c-alarm-actions-chips\` with selected tag and dropdown 1`] = `
<div
  class="layout c-alarm-actions-chips wrap align-center"
>
  <span
    class="c-alarm-action-chip"
    color="color3"
    text-color="white"
  />
  <span
    class="c-alarm-action-chip"
    color="color1"
    text-color="white"
  />
  <div
    class="v-menu"
  >
    <button
      class="c-alarm-actions-chips__more-btn ma-0 v-btn v-btn--icon v-btn--round theme--light v-size--default grey--text"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 20px;"
        >
          more_horiz
        </i>
      </span>
    </button>
    <!---->
  </div>
</div>
`;

exports[`c-alarm-actions-chips Renders \`c-alarm-actions-chips\` with selected tag and dropdown 2`] = `undefined`;

exports[`c-alarm-actions-chips Renders \`c-alarm-actions-chips\` without selected tag and dropdown 1`] = `
<div
  class="layout c-alarm-actions-chips wrap align-center"
>
  <span
    class="c-alarm-action-chip"
    color="color1"
    text-color="white"
  />
  <span
    class="c-alarm-action-chip"
    color="color2"
    text-color="white"
  />
  <span
    class="c-alarm-action-chip"
    color="color3"
    text-color="white"
  />
  <!---->
</div>
`;

exports[`c-alarm-actions-chips Renders \`c-alarm-actions-chips\` without selected tag and with dropdown 1`] = `
<div
  class="layout c-alarm-actions-chips wrap align-center"
>
  <span
    class="c-alarm-action-chip"
    color="color1"
    text-color="white"
  />
  <div
    class="v-menu"
  >
    <button
      class="c-alarm-actions-chips__more-btn ma-0 v-btn v-btn--icon v-btn--round theme--light v-size--default grey--text"
      type="button"
    >
      <span
        class="v-btn__content"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate material-icons theme--light white--text"
          style="font-size: 20px;"
        >
          more_horiz
        </i>
      </span>
    </button>
    <!---->
  </div>
</div>
`;

exports[`c-alarm-actions-chips Renders \`c-alarm-actions-chips\` without selected tag and with dropdown 2`] = `undefined`;
